--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,7 +66,7 @@
             </nav>
 
             <div class="col-4 text-right">
-                <a href="../proyecto-final/index.html">
+                <a href="./index.html">
                     <img src="../images/logo.png" alt="logo" class="logo" />
                 </a>
             </div>
