--- a/pages/products.html
+++ b/pages/products.html
@@ -62,7 +62,7 @@
             </nav>
 
             <div class="col-4 text-right">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="../images/logo.png" alt="logo" class="logo" />
                 </a>
             </div>
