--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
                 </div>
             </nav>
 
-            <div class="col-4 text-right">                
-                    <img src="./images/logo.png" alt="logo" class="logo" />                
+            <div class="col-4 text-right">
+                <a href="index.html">
+                    <img src="./images/logo.png" alt="logo" class="logo" />
+                </a>
             </div>
 
 
